--- a/Drogaria/src/main/webapp/paginas/produto/cadastro-produto.xhtml
+++ b/Drogaria/src/main/webapp/paginas/produto/cadastro-produto.xhtml
@@ -25,7 +25,7 @@
 					<f:selectItems value="#{beanCadastroProduto.listaFabricantes}"
 						var="fabricantes" itemLabel="#{fabricantes.fabricante}"
 						itemValue="#{fabricantes}" />
-				</p:selectOneMenu>
+				</p:selectOneMenu>s
 
 			</p:panelGrid>
 			<p:commandButton value="Cadastrar"
